# SimpleSynth

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  docker-compose.yml  main.cpp
.github/workflows/: cmake.yml  main.yml
cmake/: FindCoreAudio.cmake
docs/: CMakeLists.txt  Doxyfile.in  save_example.txt
include/: IdGenerator.h  ModuleEditor.h  WindowHost.h
include/modules/: Amplifier.h  ChorusNode.h  Delay.h  DelayNode.h  EchoNode.h  Mixer.h  Module.h  NoiseGenerator.h  Oscillator.h  Output.h  PitchShiftNode.h  RectOscillator.h  SawOscillator.h  Sequencer.h  SineOscillator.h  Sweep.h
save/: final_test.ini  final_test.sav  test.ini  test.sav
src/: ModuleEditor.cpp  WindowHost.cpp  main.cpp
src/modules/: Amplifier.cpp  ChorusNode.cpp  Delay.cpp  DelayNode.cpp  EchoNode.cpp  Mixer.cpp  Module.cpp  NoiseGenerator.cpp  Oscillator.cpp  Output.cpp  PitchShiftNode.cpp  RectOscillator.cpp  SawOscillator.cpp  Sequencer.cpp  SineOscillator.cpp  Sweep.cpp  Sweep.h
tests/: CMakeLists.txt  id_generator_test.cpp  node_test.cpp  oscillator_test.cpp  save_load_test.cpp  save_test.txt  template_test_example.cpp
